# quilt

./: .markdownlintignore  README.md  ruff.toml
.github/python-packaging/: inventory.csv  inventory.json
.github/scripts/: python_packaging.py
.github/workflows/: py-ci.yml
api/python/: .python-version  pyproject.toml
api/python/quilt3/: formats.py  main.py
api/python/quilt3-graphql/: pyproject.toml
api/python/quilt3/_graphql_client/: client.py  fragments.py
api/python/quilt3/admin/: api_keys.py  sso_config.py  tabulator.py  users.py  util.py
api/python/quilt3_local/: _upstream.py  aws.py  buckets.py  graphql.py  main.py  s3proxy.py  search.py
api/python/quilt3_local/lambdas/: __init__.py  preview.py  s3select.py  tabular_preview.py  thumbnail.py
api/python/quilt3_local/lambdas/shared/: decorator.py
api/python/tests/: preview_fixtures.py  test_local_mode.py  test_local_runner.py
catalog/: package-lock.json
catalog/app/components/Preview/loaders/: Pdf.js  Pdf.spec.js
catalog/app/components/Preview/renderers/: Fcs.spec.jsx  Pdf.jsx  Pdf.spec.js
docs/: CHANGELOG.md  CONTRIBUTING.md  python_packaging.md  python_packaging_inventory.csv  python_packaging_inventory.json
docs/Catalog/: Installation.md  LocalMode.md  Preview.md
docs/advanced-features/: workflows.md
docs/api-reference/: Admin.md  Bucket.md  Hooks.md  Package.md  api.md  authentication.md  custom-ssl-certificates.md  limitations.md
gendocs/: build.py  pydocmd.yml  pyproject.toml
lambdas/: local_runner.py
lambdas/access_counts/: pyproject.toml
lambdas/es_ingest/: pyproject.toml
lambdas/iceberg/: pyproject.toml
lambdas/indexer/: Dockerfile  pyproject.toml
lambdas/indexer/src/t4_lambda_es_indexer/: index.py
lambdas/indexer/test/: test_index.py  test_read_notebook.py
lambdas/manifest_indexer/: pyproject.toml
lambdas/manifest_indexer/src/t4_lambda_manifest_indexer/: __init__.py
lambdas/pkgevents/: pyproject.toml
lambdas/pkgpush/: pyproject.toml
lambdas/pkgpush/src/t4_lambda_pkgpush/: __init__.py
lambdas/pkgpush/tests/: test_try_get_precomputed_from_head.py
lambdas/preview/: pyproject.toml  requirements.txt
lambdas/preview/src/t4_lambda_preview/: __init__.py
lambdas/preview/test/: test_index.py
lambdas/s3hash/: pyproject.toml
lambdas/s3hash/src/t4_lambda_s3hash/: __init__.py
lambdas/s3hash/tests/: test_compute_checksum.py
lambdas/scripts/: build_zip.sh
lambdas/shared/: pyproject.toml
lambdas/shared/src/t4_lambda_shared/: decorator.py  preview.py
lambdas/shared/tests/: test_preview.py
lambdas/shared/tests/data/fcs/: README.md
lambdas/tabular_preview/: pyproject.toml
lambdas/tabular_preview/src/t4_lambda_tabular_preview/: __init__.py
lambdas/tabular_preview/tests/: test_index.py
lambdas/thumbnail/: pyproject.toml
lambdas/thumbnail/dev/: benchmark_pdf_preview.py  generate_pdf_preview_sample.py
lambdas/thumbnail/src/t4_lambda_thumbnail/: __init__.py
lambdas/thumbnail/tests/: test_thumbnail.py
lambdas/transcode/: pyproject.toml
lambdas/transcode/src/t4_lambda_transcode/: __init__.py
py-shared/: pyproject.toml
py-shared/tests/: test_athena.py
testdocs/: README.md  clean.sh  pyproject.toml
