[project]
name = "quilt3-gendocs"
version = "0.2.0"
description = "Documentation generator for quilt3"
readme = "README.md"
requires-python = ">3.9"
dependencies = [
    "quilt3",
    "pydoc-markdown",
    "mkdocs",
    "nbconvert~=7.17",
]

[tool.uv.sources]
quilt3 = { path = "../api/python", editable = true }
