[project]
name = "t4_lambda_manifest_indexer"
version = "0.1.1"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = "==3.13.*"
dependencies = [
    "jsonpointer~=2.4",
    "orjson~=3.10",
    "quilt-shared[boto,es]",
    "t4-lambda-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
t4-lambda-shared = { path = "../shared", editable = true }
quilt-shared = { path = "../../py-shared", editable = true }

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=6.2",
    "pytest-env~=1.1",
]

[tool.uv]
default-groups = ["test"]
