[project]
name = "t4_lambda_transcode"
version = "0.1.1"
requires-python = "==3.13.*"
dependencies = [
    "t4-lambda-shared",
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
t4-lambda-shared = { path = "../shared", editable = true }
